--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node front-app/webpack-config/build.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.3.0",
     "sequelize": "^3.0.0",
+    "superagent": "^3.5.2",
     "transform-runtime": "0.0.0",
     "url-loader": "^0.5.9",
     "vue": "^2.3.4",
