--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node front-app/webpack-config/build.js",
-    "start":"node app.js",
-    "dev":"node app.js"
+    "start": "node app.js",
+    "dev": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.3",
     "css-loader": "^0.28.4",
@@ -28,6 +29,7 @@
     "mysql": "^2.13.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.3.0",
+    "redis": "^2.7.1",
     "sequelize": "^3.0.0",
     "superagent": "^3.5.2",
     "transform-runtime": "0.0.0",
@@ -39,6 +41,7 @@
     "vuex": "^2.3.1",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
