--- a/package.json
+++ b/package.json
@@ -15,37 +15,25 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
-    "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.3",
-    "css-loader": "^0.28.4",
+
     "ejs": "^2.5.6",
     "element-ui": "^1.3.7",
     "express": "^4.15.3",
     "express-fileupload": "^0.1.4",
-    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
-    "friendly-errors-webpack-plugin": "^1.6.1",
     "has-flag": "^2.0.0",
-    "html-webpack-plugin": "^2.29.0",
     "moment": "^2.18.1",
     "mysql": "^2.13.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.3.0",
     "redis": "^2.7.1",
     "sequelize": "^3.0.0",
     "socket.io": "^2.0.3",
     "superagent": "^3.5.2",
-    "transform-runtime": "0.0.0",
-    "url-loader": "^0.5.9",
     "vue": "^2.3.4",
     "vue-loader": "^13.0.0",
     "vue-router": "^2.7.0",
-    "vue-template-compiler": "^2.3.4",
-    "vuex": "^2.3.1",
-    "webpack": "^3.0.0",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
@@ -55,6 +43,19 @@
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0"
+    "babel-register": "^6.22.0",
+    "webpack": "^3.0.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-merge": "^4.1.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin": "^2.29.0",
+    "transform-runtime": "0.0.0",
+    "url-loader": "^0.5.9",
+    "vue-template-compiler": "^2.3.4",
+    "css-loader": "^0.28.4"
   }
 }
