--- a/package.json
+++ b/package.json
@@ -5,24 +5,27 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node front-app/webpack-config/build.js",
-    "start": "npm install && node app.js",
-    "dev": "node app.js"
+    "build": "export NODE_ENV='development' && node front-app/webpack-config/build.js",
+    "start": "node app.js",
+    "dev": "export NODE_ENV='development' && node app.js",
+    "prd": "export NODE_ENV='production' && node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-component": "^0.10.0",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
-
     "ejs": "^2.5.6",
     "element-ui": "^1.3.7",
     "express": "^4.15.3",
     "express-fileupload": "^0.1.4",
     "file-loader": "^0.11.2",
     "has-flag": "^2.0.0",
+    "min-ui": "0.0.2",
+    "mint-ui": "^2.2.7",
     "moment": "^2.18.1",
     "mysql": "^2.13.0",
     "ora": "^1.3.0",
@@ -31,8 +34,10 @@
     "socket.io": "^2.0.3",
     "superagent": "^3.5.2",
     "vue": "^2.3.4",
+    "vue-avatar": "^2.0.0",
     "vue-loader": "^13.0.0",
     "vue-router": "^2.7.0",
+    "vued3tree": "^3.4.2",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
